package com.fitness.models;

import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

import java.util.List;
@Data
@Entity
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class Studio {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    private String name;       // Название студии
    private String address;    // Адрес
    @OneToOne
    @JoinColumn(name = "admin_id")
    private User admin;
    @OneToMany(mappedBy = "studio")
    private List<TimeSlot> timeSlots;  // Слоты доступности

    public User getAdmin() {
        return admin;
    }

    public void setAdmin(User admin) {
        this.admin = admin;
    }
}
