package com.fitness.models;

import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

import java.time.LocalDate;
import java.time.LocalTime;
import java.util.List;

@Entity
@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class TimeSlot {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    private LocalDate date;              // Дата слота
    private LocalTime startTime;         // Начало
    private LocalTime endTime;           // Конец

    private boolean available;           // Свободен ли слот

    @ManyToOne(fetch = FetchType.LAZY, optional = false)
    @JoinColumn(name = "studio_id", nullable = false)
    private Studio studio;


@OneToMany(mappedBy = "timeSlot", cascade = CascadeType.ALL)
private List<Booking> bookings;
    private boolean trial;

    public Studio getStudio() {
        return studio;
    }
}
